[package]
name = "glaciers"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.0-rc.1", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_image",
    "bevy_mesh",
    "bevy_winit",
    "bevy_window",
    "multi_threaded",
    "reflect_auto_register",
    "sysinfo_plugin",
] }
wgpu = "26"

[dev-dependencies]
# bevy = { version = "0.17.0-rc.1", default-features = false, features = [
#     "bevy_render",
# ] }
fastrand = "2.3.0"
